# opentyrian2000

./: .gitignore  CMakeLists.txt  EBOOT.PBP  Info-VisionOS.plist  Info-iOS.plist  Info-tvOS.plist  Info.plist  Makefile.3DS  Makefile.GC  Makefile.NDS  Makefile.appletv  Makefile.esp32  Makefile.ios  Makefile.linux  Makefile.mac68k  Makefile.macos  Makefile.macppc  Makefile.macsdl1  Makefile.mingw32  Makefile.mingw64  Makefile.ps2  Makefile.psvita  Makefile.switch  Makefile.wii  PARAM.SFO  README  README.md  build-android.sh  build.sh  diagram.json  makefile.pspp  opentyrian2000.dol  opentyrian2000.prx  partitions_lfs.csv  sdkconfig  sdkconfig.esp32s3  sdkconfig.old
.devcontainer/: devcontainer.json  setup-android-sdk.sh
MacClassic/: CMakeLists.txt
MacClassic/.rsrc/: opentyrian2000.APPL
components/OpenTyrian/: CMakeLists.txt  arg_parse.h  backgrnd.h  component.mk  config.c  destruct.h  editship.c  editship.h  episodes.h  font.h  fonthand.h  game_menu.c  helptext.h  loudness.c  lvllib.c  lvllib.h  macos-bundle.h  macos-bundle.m  mainint.c  mainint.h  menus.h  nortvars.h  opentyrian2000.rc  opentyrian_version.h  opl.h  pcxload.c  pcxmast.c  picload.c  player.c  resource.h  shots.c  shots.h  sizebuf.c  sizebuf.h  sndmast.h  sprite.c  starlib.h  tyrian2.c  varz.c  varz.h  (+3 more)
components/SDL/: CMakeLists.txt  Kconfig.projbuild  SDL.h  SDL_audio.c  SDL_audio.h  SDL_error.c  SDL_error_c.h  SDL_event.c  SDL_event.h  SDL_input.c  SDL_input.h  SDL_scancode.h  SDL_stdinc.h  SDL_system.c  SDL_video.c  begin_code.h  component.mk  idf_component.yml  spi_lcd.c
components/SDL/SDL/Xcode/SDL/SDL.xcodeproj/project.xcworkspace/xcuserdata/andyvand.xcuserdatad/: UserInterfaceState.xcuserstate
components/SDL/SDL/Xcode/SDL/SDL.xcodeproj/xcshareddata/xcschemes/: SDL3.xcscheme
components/SDL/SDL/Xcode/SDL/SDL.xcodeproj/xcuserdata/andyvand.xcuserdatad/xcschemes/: xcschememanagement.plist
components/SDL/SDL/src/: SDL_error.c
components/SDL/SDL/src/audio/: SDL_audio.c  SDL_wave.c
components/SDL/SDL/src/sensor/: SDL_sensor.c
components/SDL/SDL/src/thread/pthread/: SDL_sysmutex.c
components/SDL/include/build_config/: SDL_build_config_esp_idf.h
components/SDL/src/audio/: SDL_audio.c  SDL_espaudio.c  SDL_espaudio.h
components/SDL/src/joystick/esp/: SDL_sysjoystick.c
components/SDL/src/thread/pthread/: SDL_systhread.c
components/SDL/src/video/esp-idf/: SDL_espidfframebuffer.c  SDL_espidftouch.c  SDL_espidfvideo.c
extras/: Audio0.pcm  Audio1.pcm  Audio10.pcm  Audio11.pcm  Audio12.pcm  Audio13.pcm  Audio14.pcm  Audio15.pcm  Audio16.pcm  Audio17.pcm  Audio18.pcm  Audio19.pcm  Audio2.pcm  Audio20.pcm  Audio21.pcm  Audio22.pcm  Audio23.pcm  Audio24.pcm  Audio25.pcm  Audio26.pcm  Audio27.pcm  Audio28.pcm  Audio29.pcm  Audio3.pcm  Audio30.pcm  Audio4.pcm  Audio5.pcm  Audio6.pcm  Audio7.pcm  Audio8.pcm  Audio9.pcm  Voice0.pcm  Voice1.pcm  Voice2.pcm  Voice3.pcm  Voice4.pcm  Voice5.pcm  Voice6.pcm  Voice7.pcm  Voice8.pcm  (+11 more)
linux/: debpkg.pl
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk
release_esp32/: build_release.sh
src/: animlib.c  arg_parse.c  backgrnd.c  backgrnd.h  config.c  config.h  config_file.c  config_file.h  destruct.c  editship.c  episodes.c  episodes.h  file.c  file.h  font.c  font.h  fonthand.c  (+59 more)
(+110 files in other folders)
